buildscript {
    repositories {
        jcenter()
    }
}
apply plugin: 'com.android.application'



android {
    compileSdkVersion 25
    buildToolsVersion '25.0.2'

    defaultConfig {
        applicationId "com.masrepus.vplanapp"
        minSdkVersion 14
        targetSdkVersion 25
        versionCode 35
        versionName "4.0"

        jackOptions {
            enabled true
        }
    }

    buildTypes {
        release {
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
            zipAlignEnabled true
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
        incremental true
    }
}

dependencies {
    compile 'com.android.support:support-v4:25.1.1'
    compile 'com.android.support:appcompat-v7:25.1.1'
    compile 'com.android.support:cardview-v7:25.1.1'
    compile 'com.android.support:design:25.1.1'
    compile 'com.google.android.gms:play-services-wearable:10.0.1'
    compile 'com.github.rampo.updatechecker:library:2.1.8'
    compile project(':showcaseview')
    wearApp project(path: ':wear', configuration: 'wear1Release')
    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
    compile 'org.jsoup:jsoup:1.10.2'
}